fix calendar and guest modal conflicts

--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -308,11 +308,7 @@
                                                 filters</span>
                                             </div>
                                             <div class="fczcwlc dir dir-ltr">
-<<<<<<< HEAD
-                                              <button class="header__search-date-option-exact-dates-btn" aria-expanded="false" type="button" data-modal="#calendar-modal">
-=======
-                                              <button data-modal="#calendar-mobile-modal" class="header__search-date-option-exact-dates-btn" aria-expanded="false" type="button">
->>>>>>> a09c0ba77a068b31034ac2b0515897dbf10ef459
+                                              <button class="header__search-date-option-exact-dates-btn" aria-expanded="false" type="button" data-modal="#calendar-mobile-modal">
                                                 <span class="c194hv19 dir dir-ltr">
                                                   Oct 31</span>
                                                 <span aria-hidden="true" class="button__hidden-text">
@@ -322,11 +318,7 @@
                                               </button>
                                             </div>
                                             <div class="fczcwlc dir dir-ltr">
-<<<<<<< HEAD
-                                              <button class="_15pf4i2" aria-expanded="false" type="button" data-modal="#guest-modal">
-=======
-                                              <button data-modal="#guests-counter-mobile-modal" class="header__search-date-option-exact-dates-btn" aria-expanded="false" type="button">
->>>>>>> a09c0ba77a068b31034ac2b0515897dbf10ef459
+                                              <button class="_15pf4i2" aria-expanded="false" type="button" data-modal="#guests-counter-mobile-modal">
                                                 <span class="c194hv19 dir dir-ltr">
                                                   2 guests</span>
                                                 <span aria-hidden="true" class="button__hidden-text">
@@ -1883,7 +1875,6 @@
                                             </button>
                                           </div>
                                           <div class="fczcwlc dir dir-ltr">
-<<<<<<< HEAD
                                             <button
                                               class="btn-filter-rounded-sm"
                                               aria-expanded="false"
@@ -1900,12 +1891,6 @@
                                                   >Guests</span
                                                 ></span
                                               >
-=======
-                                            <button data-modal="#guests-counter-modal" class="header__search-date-option-exact-dates-btn" aria-expanded="false"
-                                              type="button">
-                                              <span class="c194hv19 dir dir-ltr">2 guests</span><span aria-hidden="true" class="button__hidden-text"><span
-                                                  class="c194hv19 dir dir-ltr">2 guests</span></span>
->>>>>>> a09c0ba77a068b31034ac2b0515897dbf10ef459
                                             </button>
                                           </div>
                                         </div>
@@ -8082,12 +8067,6 @@
       </div>
     </div>
 
-<<<<<<< HEAD
-<script src="../assets/js/components.js"></script>
-<!-- <script src="../assets/js/explore.js"></script> -->
-<script src="../assets/js/pages/wishlist.js"></script>
-
-=======
 <!-- inline calendar mobile modal -->
 <div id="calendar-mobile-modal" class="hidden" dir="ltr">
   <div class="_1t0jy5tw"></div>
@@ -9858,4 +9837,3 @@
     <script src="../assets/js/pages/wishlist.js"></script>
   </body>
 </html>
->>>>>>> a09c0ba77a068b31034ac2b0515897dbf10ef459
