--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -22037,6 +22037,126 @@
   </div>
 </div>
 
+
+  <!-- Amenities modal -->
+  <div id="amenities-modal" class="hidden"  dir="ltr">
+    <div class="modal__backdrop"></div>
+    <section>
+      <div class="modal__container" data-testid="modal-container">
+        <div class="contents">
+          <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+          <div class="contents">
+            <div role="dialog" aria-modal="true" class="_244p2lw" style="position: relative; max-width: 568px !important">
+              <div class="modal__close">
+                <button data-button="close" aria-label="Close" type="button" class="btn-close">
+                  <span class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="
+                        display: block;
+                        fill: none;
+                        height: 16px;
+                        width: 16px;
+                        stroke: currentcolor;
+                        stroke-width: 3;
+                        overflow: visible;
+                      ">
+                      <path d="m6 6 20 20"></path>
+                      <path d="m26 6-20 20"></path></svg></span>
+                </button>
+              </div>
+              <div class="_1lplc7"></div>
+                <div class="_1jza0fl">
+                <section class="" style="margin-top: 3%">
+                  <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                    <div class="_1mo6nsk" data-testid="user-flag-title">
+                      Why are you reporting this listing?
+                    </div>
+                  </h2>
+                </section>
+                <div class="_zu3isv">
+                  <div class="_amlvih">This won’t be shared with the Host.</div>
+                </div>
+                <div class="_mmcfcd">
+                  <div id="inaccurate_incorrect" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
+                    <label for="inaccurate_incorrect-row-radio-button" class="_13xlah4"><div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div id="inaccurate_incorrect-row-title" class="_gw4xx4">
+                            It’s inaccurate or incorrect
+                          </div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <input aria-labelledby="inaccurate_incorrect-row-title" aria-describedby="inaccurate_incorrect-row-subtitle" id="inaccurate_incorrect-row-radio-button" class="radio__button" type="radio" value="inaccurate_incorrect">
+                        </div></div></label>
+                  </div>
+                  <div id="not_real_place" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
+                    <label for="not_real_place-row-radio-button" class="_13xlah4"><div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div id="not_real_place-row-title" class="_gw4xx4">
+                            It’s not a real place to stay
+                          </div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <input aria-labelledby="not_real_place-row-title" aria-describedby="not_real_place-row-subtitle" id="not_real_place-row-radio-button" class="radio__button" type="radio" value="not_real_place">
+                        </div></div></label>
+                  </div>
+                  <div id="scam" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
+                    <label for="scam-row-radio-button" class="_13xlah4"><div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div id="scam-row-title" class="_gw4xx4">It’s a scam</div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <input aria-labelledby="scam-row-title" aria-describedby="scam-row-subtitle" id="scam-row-radio-button" class="radio__button" type="radio" value="scam">
+                        </div></div></label>
+                  </div>
+                  <div id="offensive" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
+                    <label for="offensive-row-radio-button" class="_13xlah4"><div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div id="offensive-row-title" class="_gw4xx4">It’s offensive</div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <input aria-labelledby="offensive-row-title" aria-describedby="offensive-row-subtitle" id="offensive-row-radio-button" class="radio__button" type="radio" value="offensive">
+                        </div></div></label>
+                  </div>
+                  <div id="something_else" aria-disabled="false" class="r1pyaok7 dir dir-ltr">
+                    <label for="something_else-row-radio-button" class="_13xlah4"><div class="_jro6t0">
+                        <div class="_gfomxi">
+                          <div id="something_else-row-title" class="_gw4xx4">
+                            It’s something else
+                          </div>
+                        </div>
+                        <div class="_1mqc21n">
+                          <input aria-labelledby="something_else-row-title" aria-describedby="something_else-row-subtitle" id="something_else-row-radio-button" class="radio__button" type="radio" value="something_else">
+                        </div></div></label>
+                  </div>
+                </div>
+              </div>
+              <footer>
+                    <div class="flex-before-after dir dir-ltr" style="">
+                      <div style="--gp-section-max-width: 1120px">
+                        <div data-plugin-in-point-id="COMPOSITE_FILTER_FOOTER_ALL_FILTERS:TAB_8225" data-section-id="COMPOSITE_FILTER_FOOTER_ALL_FILTERS:TAB_8225">
+                          <div class="_kr7m4r">
+                            <footer class="modal__footer">
+                              
+                              <button data-testid="flag-primary-button" disabled="" type="button" class="btn-dark" id="report-this-next" style="margin-left:auto !important">
+                                Next
+                              </button>
+                            </footer>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </footer>
+            </div>
+          </div>
+          <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+        </div>
+      </div>
+    </section>
+    <div class="container__border-0">
+      <div aria-live="polite" aria-atomic="true"></div>
+      <div aria-live="assertive" aria-atomic="true"></div>
+    </div>
+  </div>
+  <!-- end Aminities Modal -->
+
 <div id="gallery-modal" class="hidden" dir="ltr">
   <section>
     <div class="_j292vx" data-testid="modal-container">
@@ -24809,6 +24929,7 @@
     <div aria-live="polite" aria-atomic="true"></div>
     <div aria-live="assertive" aria-atomic="true"></div>
   </div>
+
 </div>
     
     <script src="../assets/js/components.js"></script>
