--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -15733,6 +15733,7 @@
                                                                         <button
                                                                           type="button"
                                                                           class="confirm-pay__price-btn"
+                                                                          id="open-modal-price-breakdown"
                                                                         >
                                                                           <div
                                                                             class="_m6lwl6"
@@ -35491,6 +35492,91 @@
   </div>
 </div>
 
+<div dir="ltr">
+  <div class="_ybk1kl0 hidden"></div>
+  <section>
+   <div class="_g2ext hidden" data-testid="modal-container">
+    <div class="_z4lmgp">
+     <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+     <div class="_z4lmgp">
+      <div role="dialog" aria-label="Base Price Breakdown" aria-modal="true" class="modal-price-breakdown _ewwxwe" style="position: absolute; top: 468px; right: 606.25px; transform-origin: right top;">
+       <div class="_1wv4knt">
+        <button aria-label="Close" type="button" class="_oda838" id="close-modal-price-breakdown">
+         <span class="_e296pg">
+          <svg
+           viewBox="0 0 32 32"
+           xmlns="http://www.w3.org/2000/svg"
+           aria-hidden="true"
+           role="presentation"
+           focusable="false"
+           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+          >
+           <path d="m6 6 20 20"></path>
+           <path d="m26 6-20 20"></path>
+          </svg>
+         </span>
+        </button>
+       </div>
+       <header class="_1c8aprq">
+        <div class="_1tng6ym"></div>
+        <div class="_9t7ktw">
+         <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Base Price Breakdown</div></h1>
+        </div>
+        <div class="_rrmdgl"></div>
+       </header>
+       <div class="_12kfhdn">
+        <div>
+         <div class="_1875dx">
+          <div
+           class="_1wpjhdm"
+           style="
+            --pricing-guest-display-price-alignment: flex-start;
+            --pricing-guest-display-price-flex-wrap: wrap;
+            --pricing-guest-primary-line-font-size: 16px;
+            --pricing-guest-primary-line-line-height: 20px;
+            --pricing-guest-primary-line-unit-price-font-weight: 800;
+            --pricing-guest-primary-line-trailing-content-font-size: 14px;
+            --pricing-guest-secondary-line-font-size: 14px;
+            --pricing-guest-secondary-line-line-height: 18px;
+            --pricing-guest-secondary-line-color: #717171;
+            --pricing-guest-explanation-disclaimer-font-size: 14px;
+            --pricing-guest-explanation-disclaimer-line-height: 18px;
+            --pricing-guest-primary-line-strikethrough-price-font-weight: 600;
+            --pricing-guest-primary-line-qualifier-font-size: 16px;
+            --pricing-guest-primary-line-qualifier-line-height: 20px;
+           "
+          >
+           <section>
+            <div class="_18x0pkv">
+             <div class="_1fpuhdl">
+              <span class="_18x3iiu"><div>3/22/2023</div></span><span class="_1k4xcdh">₱54,950</span>
+             </div>
+             <div class="_1fpuhdl">
+              <span class="_18x3iiu"><div>3/23/2023</div></span><span class="_1k4xcdh">₱54,950</span>
+             </div>
+            </div>
+            <div class="_1emnh212">
+             <div class="_1qh0b5n">
+              <span class="_18x3iiu"><div>Total Base Price</div></span><span class="_1k4xcdh">₱109,900</span>
+             </div>
+            </div>
+           </section>
+          </div>
+         </div>
+        </div>
+       </div>
+      </div>
+     </div>
+     <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+    </div>
+   </div>
+  </section>
+  <div class="_b21f4g">
+   <div aria-live="polite" aria-atomic="true"></div>
+   <div aria-live="assertive" aria-atomic="true"></div>
+  </div>
+ </div>
+ 
     <script src="../assets/js/components.js"></script>
     <script src="../assets/js/pages/products.js" defer></script>
   </body>
