fix existing products-luxe interactions

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -26419,6 +26419,122 @@
     <div aria-live="assertive" aria-atomic="true"></div>
   </div>
 </div>
+    <div dir="ltr">
+      <div class="_1t0jy5tw hidden msg-backdrop"></div>
+      <section>
+        <div class="_vxvq8x hidden modal-container-msg" style="align-items: center !important;" data-testid="modal-container">
+        <div class="_z4lmgp">
+          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+          <div class="_z4lmgp">
+          <div role="dialog" aria-label="Questions about this home?" aria-modal="true" class="_244p2lw modal-msg" style="position: relative;">
+            <div class="_pa35zs">
+            <button aria-label="Close" type="button" class="_oda838" id="close-modal-msg">
+              <span class="_e296pg">
+              <svg
+                viewBox="0 0 32 32"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+                role="presentation"
+                focusable="false"
+                style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+              >
+                <path d="m6 6 20 20"></path>
+                <path d="m26 6-20 20"></path>
+              </svg>
+              </span>
+            </button>
+            </div>
+            <div class="_1lplc7"></div>
+            <div class="_17itzz4" style="padding: 40px 24px 24px;">
+            <div tabindex="0" class="_1seuw5go">
+              <div class="_w5rwe2">
+              <div class="_171co19">
+                <div style="display: contents; --dls19-brand-color: var(--f-k-smk-x);">
+                <section>
+                  <div class="_1kb5zmd"><h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Questions about this home?</h2></div>
+                  <div class="_1vkmpb5">
+                  <div class="_7ytxmo">
+                    <div class="_ymq6as">Villa Cetinale</div>
+                    <div class="_1fopc40"><a href="/s/Sovicille,Siena,Italy/luxury" class="_1sikdxcl">Sovicille, Siena, Italy</a></div>
+                    <div
+                    style="
+                      --pricing-guest-display-price-alignment: flex-start;
+                      --pricing-guest-display-price-flex-wrap: wrap;
+                      --pricing-guest-primary-line-font-size: 22px;
+                      --pricing-guest-primary-line-line-height: 26px;
+                      --pricing-guest-primary-line-unit-price-font-weight: 600;
+                      --pricing-guest-primary-line-trailing-content-font-size: 14px;
+                      --pricing-guest-secondary-line-font-size: 14px;
+                      --pricing-guest-secondary-line-line-height: 18px;
+                      --pricing-guest-secondary-line-color: #717171;
+                      --pricing-guest-explanation-disclaimer-font-size: 14px;
+                      --pricing-guest-explanation-disclaimer-line-height: 18px;
+                      --pricing-guest-primary-line-strikethrough-price-font-weight: 600;
+                      --pricing-guest-primary-line-qualifier-font-size: 16px;
+                      --pricing-guest-primary-line-qualifier-line-height: 20px;
+                    "
+                    >
+                    <div class="_ati8ih">
+                      <span class="_14y1gc">
+                      <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱452,930</span><span class="_r1nvod">&nbsp;night</span></div>
+                      <span class="a8jt5op dir dir-ltr">₱452,930 per night</span>
+                      </span>
+                    </div>
+                    </div>
+                  </div>
+                  <div class="_fz3zdn">
+                    <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: auto; width: 88px; min-height: 1px;">
+                    <img
+                      class="_792k0r1"
+                      aria-hidden="true"
+                      alt=""
+                      elementtiming="LCP-target"
+                      src="https://a0.muscache.com/im/pictures/9a1bbbb4-2007-4f21-893f-3bc699f9e1d7.jpg?aki_policy=medium"
+                      data-original-uri="https://a0.muscache.com/im/pictures/9a1bbbb4-2007-4f21-893f-3bc699f9e1d7.jpg?aki_policy=medium"
+                      style="vertical-align: bottom;"
+                    />
+                    </div>
+                  </div>
+                  </div>
+                  <div class="_1kv4z85"></div>
+                  <form>
+                  <div class="_1ryugux">
+                    <label for="message">
+                    <div class="_1wgf3yo">Your message</div>
+                    <div class="_4l12l8">
+                      <div class="_1aoj0ap">
+                      <div dir="ltr">
+                        <textarea name="message" maxlength="4000" rows="4" class="_159914b" autocomplete="off" id="message" placeholder="For example: Is this home family friendly? What other homes should I consider?"></textarea>
+                      </div>
+                      </div>
+                    </div>
+                    </label>
+                  </div>
+                  <div style="margin-top: 16px;"><button disabled="" type="submit" class="_1dj2p4gk">Send message</button></div>
+                  </form>
+                </section>
+                </div>
+              </div>
+              </div>
+            </div>
+            </div>
+          </div>
+          </div>
+          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+        </div>
+      </section>
+      <div class="_b21f4g">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+      </div>
+
+
+    
+    <script src="../assets/js/components.js"></script>
+    <script src="../assets/js/pages/products.js" defer></script>
+    <script src="../assets/js/pages/products-luxe.js" defer></script>
     <script>
        document.addEventListener('scroll', () => {
         window.scrollY > 600
@@ -26430,7 +26546,5 @@
           : document.querySelector('._15tm0yy3')?.classList.replace('_15tm0yy3', '_14ukjft')
        });
     </script>
-    <script src="../assets/js/components.js"></script>
-    <script src="../assets/js/pages/products.js" defer></script>
   </body>
 </html>
