removed box shadow and input

--- a/listings-product/contact-host.html
+++ b/listings-product/contact-host.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="../dist/gbertl.css">
     <title>Contact Rinaldo - Airbnb</title>
   </head>
+  <style>
+    ._c5rhl5 {
+        width: 100% !important;
+        border: none !important;
+        outline: none !important;
+        padding: 0px !important;
+        margin: 26px 12px 6px !important;
+        min-height: 1px !important;
+        color: inherit !important;
+        background-color: transparent !important;
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        appearance: none !important;
+        box-shadow: none !important;
+    }
+  </style>
   <body class="with-new-header">
     <div id="site-skip-links">
       <a
