--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="../assets/css/pages.css" />
     <link rel="stylesheet" href="../assets/css/wishlist.css" />
   </head>
+  <style>
+    .btn-share-desktop{
+      appearance: none !important;
+      display: inline-block !important;
+      border-radius: 50% !important;
+      border: none !important;
+      outline: none !important;
+      margin: 0px !important;
+      padding: 0px !important;
+      color: rgb(34, 34, 34) !important;
+      cursor: pointer !important;
+      touch-action: manipulation !important;
+      position: relative !important;
+      background: transparent !important;
+      transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+    }
+    ._652db9 {
+      font-size: 16px !important;
+      line-height: 20px !important;
+      color: rgb(34, 34, 34) !important;
+      font-weight: 600 !important;
+      margin-bottom: 4px !important;
+    }
+  </style>
   <body class="with-new-header">
     <div id="site-skip-links">
       <a
@@ -1767,7 +1791,7 @@
                                       type="button"
                                       data-modal="#share-modal"
                                       
-                                      class="btn-share-desktop"
+                                      class="btn-share-desktop btn-save"
                                     >
                                       <span class="relative"
                                         ><svg
