add static gallery modal

--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -8,9 +8,7 @@
 
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
-    <link rel="stylesheet" href="../assets/css/places.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-
+    <link rel="stylesheet" href="../dist/gbertl.css">
   </head>
 
   <body class="with-new-header">
@@ -17328,5 +17326,192 @@
         contain: strict;
       "
     ></div>
+
+    <!-- gallery modal -->
+<div role="dialog" class="_1ugan3i" style="z-index: 2000">
+  <div class="_1od2xb8">
+    <div class="_rgyfiy">
+      <div>
+        <div data-showat="mediumAndAbove">
+          <div class="_1llxo8x">
+            <button
+              type="button"
+              class="_1rp5252"
+              aria-busy="false"
+              style="padding: 32px; margin: -32px"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                role="img"
+                aria-hidden="false"
+                aria-label="Close"
+                focusable="false"
+                style="
+                  height: 24px;
+                  width: 24px;
+                  display: block;
+                  fill: rgb(72, 72, 72);
+                "
+              >
+                <path
+                  d="m23.25 24c-.19 0-.38-.07-.53-.22l-10.72-10.72-10.72 10.72c-.29.29-.77.29-1.06 0s-.29-.77 0-1.06l10.72-10.72-10.72-10.72c-.29-.29-.29-.77 0-1.06s.77-.29 1.06 0l10.72 10.72 10.72-10.72c.29-.29.77-.29 1.06 0s .29.77 0 1.06l-10.72 10.72 10.72 10.72c.29.29.29.77 0 1.06-.15.15-.34.22-.53.22"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div data-showat="mediumAndAbove">
+        <div class="_40iwxv">
+          <div class="_z9dr48">
+            <div data-showat="mediumAndAbove">
+              <button type="button" aria-label="Previous" class="_12qhocje">
+                <svg
+                  viewBox="0 0 18 18"
+                  role="presentation"
+                  aria-hidden="true"
+                  focusable="false"
+                  style="height: 24px; width: 24px; fill: rgb(72, 72, 72)"
+                >
+                  <path
+                    d="m13.7 16.29a1 1 0 1 1 -1.42 1.41l-8-8a1 1 0 0 1 0-1.41l8-8a1 1 0 1 1 1.42 1.41l-7.29 7.29z"
+                    fill-rule="evenodd"
+                  ></path>
+                </svg></button
+              ><button type="button" aria-label="Next" class="_wlnonhg">
+                <svg
+                  viewBox="0 0 18 18"
+                  role="presentation"
+                  aria-hidden="true"
+                  focusable="false"
+                  style="height: 24px; width: 24px; fill: rgb(72, 72, 72)"
+                >
+                  <path
+                    d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z"
+                    fill-rule="evenodd"
+                  ></path>
+                </svg>
+              </button>
+            </div>
+            <img
+              class="_17vo0vv"
+              aria-hidden="true"
+              src="https://a0.muscache.com/im/pictures/e557bf4b-cde7-4107-a696-2c22ab889b69.jpg?im_w=1200"
+              alt=""
+            /><span
+              ><div data-showat="largeAndAbove">
+                <img
+                  src="https://a0.muscache.com/im/pictures/e557bf4b-cde7-4107-a696-2c22ab889b69.jpg?im_w=1200"
+                  alt=""
+                  data-veloute="slideshow-image"
+                  style="
+                    max-height: 75vh;
+                    object-fit: cover;
+                    cursor: pointer;
+                    z-index: 2;
+                    border-radius: 16px;
+                    position: absolute;
+                    max-width: 85%;
+                    margin: 0px auto;
+                    inset: 50% 0px 0px;
+                    transform: translateY(-50%);
+                  "
+                /></div
+            ></span>
+            <div class="_1u9fru1">
+              <img
+                src="https://a0.muscache.com/im/pictures/34527a29-4963-4a2a-9a15-c694574accbb.jpg?im_w=1200"
+                alt=""
+              /><img
+                src="https://a0.muscache.com/im/pictures/c5af983b-869e-4b0f-bfc4-e0f1e045e154.jpg?im_w=1200"
+                alt=""
+              /><img
+                src="https://a0.muscache.com/im/pictures/d12c4075-afcf-487e-be87-9ab79c2029bf.jpg?im_w=1200"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <div class="_o00axf">
+          <div class="_1q5yq3s">
+            <div class="_1gcx0s8">
+              <div class="_q3au4a">
+                <div class="_cw8pnk">
+                  <div></div>
+                  <div class="_1iwi6a4"></div>
+                  <div class="_2fozrm">
+                    <div class="_zf7q4">
+                      <ul class="_conlnu">
+                        <li class="_1y6wdia">
+                          <button
+                            data-photo-index="0"
+                            class="_1umg7png"
+                            aria-label="1/4: "
+                          >
+                            <img
+                              alt=""
+                              src="https://a0.muscache.com/im/pictures/e557bf4b-cde7-4107-a696-2c22ab889b69.jpg?aki_policy=small"
+                              class="_u6tx3c"
+                            />
+                          </button>
+                        </li>
+                        <li class="_12n0r6ug">
+                          <button
+                            data-photo-index="1"
+                            class="_hwcst"
+                            aria-label="2/4: "
+                          >
+                            <img
+                              alt=""
+                              src="https://a0.muscache.com/im/pictures/34527a29-4963-4a2a-9a15-c694574accbb.jpg?aki_policy=small"
+                              class="_u6tx3c"
+                            />
+                          </button>
+                        </li>
+                        <li class="_12n0r6ug">
+                          <button
+                            data-photo-index="2"
+                            class="_hwcst"
+                            aria-label="3/4: "
+                          >
+                            <img
+                              alt=""
+                              src="https://a0.muscache.com/im/pictures/c5af983b-869e-4b0f-bfc4-e0f1e045e154.jpg?aki_policy=small"
+                              class="_u6tx3c"
+                            />
+                          </button>
+                        </li>
+                        <li class="_12n0r6ug">
+                          <button
+                            data-photo-index="3"
+                            class="_hwcst"
+                            aria-label="4/4: "
+                          >
+                            <img
+                              alt=""
+                              src="https://a0.muscache.com/im/pictures/d12c4075-afcf-487e-be87-9ab79c2029bf.jpg?aki_policy=small"
+                              class="_u6tx3c"
+                            />
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="_yoviva">
+            <div style="margin-bottom: 16px">
+              <div class="_1p3joamp">1 / 4</div>
+            </div>
+            <div class="_1dcp06s"><div class="_czm8crp"></div></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   </body>
 </html>
