implement showing and hiding gallery modal

--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -17328,7 +17328,7 @@
     ></div>
 
     <!-- gallery modal -->
-<div role="dialog" class="_1ugan3i" style="z-index: 2000">
+<div role="dialog" class="_1ugan3i hidden" style="z-index: 2000">
   <div class="_1od2xb8">
     <div class="_rgyfiy">
       <div>
