add hero component in small screen

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3061,11 +3061,12 @@
                                       </div>
                                     </div>
                                   </div>
+
                                   <div class="flex-before-after dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px;">
                                       <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
                                       <div data-plugin-in-point-id="INSERT_LUXE" data-section-id="INSERT_LUXE"
-                                        style="padding-top: 88px; padding-bottom: 104px; background-color: rgb(247, 247, 247); --gp-section-background-color: #F7F7F7;">
+                                        style="padding-top: 56px; padding-bottom: 56px; background-color: rgb(247, 247, 247); --gp-section-background-color: #F7F7F7;">
                                         <div class="_le6wlg">
                                           <div style="--maxWidth: 1120px;" class="plmw1e5 mq5rv0q dir dir-ltr">
                                             <section>
@@ -4936,6 +4937,7 @@
                                       </div>
                                     </div>
                                   </div>
+                                  <div>HERE</div>
                                   <div class="flex-before-after dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
@@ -14576,6 +14578,7 @@
                                     </div>
                                   </div>
                                 </div>
+                                <div>HERE</div>
                                 <div class="flex-before-after dir dir-ltr">
                                   <div style="--gp-section-max-width: 1120px">
                                     <div class="section-container">
