add message host modal

--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -35578,6 +35578,6 @@
  </div>
  
     <script src="../assets/js/components.js"></script>
-    <script src="../assets/js/pages/products.js" defer></script>
+    <script src="../assets/js/pages/products.js"></script>
   </body>
 </html>
